# filecoin-solidity

./: .gitignore  .gitmodules  .prettierrc  LICENSE  Makefile  README.md  foundry.toml  package.json  remappings.txt
.github/workflows/: main.yaml  publish.yaml  security.yaml
contracts/: SimpleCoin.sol
contracts/v0.8/: AccountAPI.sol  DataCapAPI.sol  InitAPI.sol  MarketAPI.sol  MinerAPI.sol  MultisigAPI.sol  PowerAPI.sol  PrecompilesAPI.sol  SendAPI.sol  Utils.sol  VerifRegAPI.sol
contracts/v0.8/cbor/: AccountCbor.sol  BigIntCbor.sol  BigNumberCbor.sol  BytesCbor.sol  DataCapCbor.sol  FilecoinCbor.sol  InitCbor.sol  IntCbor.sol  MarketCbor.sol  MinerCbor.sol  MultisigCbor.sol  PowerCbor.sol  VerifRegCbor.sol
contracts/v0.8/mocks/: MarketAPI.sol  MarketMockAPI.sol  MinerAPI.sol  MinerMockAPI.sol
contracts/v0.8/mocks/tests/: market.test.sol  miner.test.sol
contracts/v0.8/mocks/types/: MockTypes.sol
contracts/v0.8/tests/: account.test.sol  address.test.sol  bigints.test.sol  cbor.decode.test.sol  datacap.test.sol  deserializeparams.test.sol  init.test.sol  leb128.generated1.test.sol  leb128.generated10.test.sol  leb128.generated11.test.sol  leb128.generated12.test.sol  leb128.generated13.test.sol  leb128.generated14.test.sol  leb128.generated2.test.sol  leb128.generated3.test.sol  leb128.generated4.test.sol  leb128.generated5.test.sol  leb128.generated6.test.sol  leb128.generated7.test.sol  leb128.generated8.test.sol  leb128.generated9.test.sol  leb128.test.sol  market.test.sol  marketcbor.test.sol  miner.test.sol  multisig.test.sol  power.test.sol  precompiles.test.sol  send.test.sol  verifreg.test.sol
contracts/v0.8/types/: AccountTypes.sol  CommonTypes.sol  DataCapTypes.sol  InitTypes.sol  MarketTypes.sol  MinerTypes.sol  MultisigTypes.sol  PowerTypes.sol  VerifRegTypes.sol
contracts/v0.8/utils/: Actor.sol  BigInts.sol  CborDecode.sol  FilAddresses.sol  Leb128.sol  Misc.sol
docs/: deploy-it.md  index.md  specifications.md  use-it.md
docs/api/: api.md  use-it.md
docs/api/actors/: Account.md  DataCap.md  Market.md  Miner.md  Multisig.md  Power.md  VerifRegistry.md  _category_.json
docs/api/definitions/: Account Actor.md  DataCap.md  Miner.md  Multisig.md  Storage Market Actor.md  Storage Power Actor.md  Verified Registry Actor.md
docs/introduction/: assumptions.md  introduction.md  tech-involved.md
docs/mocks/: _category_.json  deals.md  mocks.md  use-it.md
docs/report/: _category_.json  milestone_1.md  milestone_2.md
hardhat/: .env.local  .gitignore  hardhat.config.js  package.json
hardhat/contracts/: SimpleCoin.sol
hardhat/deploy/: market.js  miner.js  power.js  simple_coin.js  verifReg.js
hardhat/tasks/: get-address.js  index.js
hardhat/tasks/market-api/: withdraw-balance.js
hardhat/tasks/miner-api/: change-beneficiary.js
hardhat/tasks/simple-coin/: get-balance.js  send-coin.js
script/src/: main.rs
scripts/: generate.py
scripts/frc42/: Cargo.toml
scripts/frc42/src/: main.rs
scripts/leb128/: generate.py
testing/: Cargo.toml  smoke_tests.sh
testing/account/: Cargo.toml
testing/account/src/: main.rs
testing/datacap/: Cargo.toml
testing/datacap/src/: main.rs
testing/examples/: methodnum.rs  serializeParams.rs
testing/init/: Cargo.toml
testing/init/src/: main.rs
testing/market/: Cargo.toml
testing/market/src/: main.rs
testing/miner/: Cargo.toml
testing/miner/src/: main.rs
testing/multisig/: Cargo.toml
testing/multisig/src/: main.rs
testing/power/: Cargo.toml
testing/power/src/: main.rs
testing/src/: helpers.rs  lib.rs  main.rs  setup.rs
testing/tests/: account.rs  address.rs  bigints.rs  cborDecode.rs  datacap.rs  deserializeParams.rs  init.rs  leb128.rs  market.rs  marketCbor.rs  miner.rs  multisig.rs  power.rs  precompiles.rs  send.rs  verifreg.rs
testing/verifreg/: Cargo.toml  tree.txt
testing/verifreg/src/: main.rs
testing_market/: Cargo.toml
testing_market/src/: main.rs
tests/datacap/: Cargo.toml
tests/datacap/src/: main.rs
tests/init/: Cargo.toml
tests/init/src/: main.rs
tests/miner/: Cargo.toml
tests/miner/src/: main.rs
tests/multisig/: Cargo.toml
tests/power/src/: main.rs
tests/verifreg/: Cargo.toml
