[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_shared = { version = "3.0.0-alpha.13" }
fvm = { version = "3.0.0-alpha.12", default-features = false, features = ["m2-native"] }
fvm_ipld_encoding = { version = "0.3.0" }
fvm_integration_tests = { version = "0.1.1-alpha.1", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
wabt = "0.10.0"
hex = "0.4.3"
bls-signatures = "0.13.0"
multihash = { version = "0.16.1", default-features = false }
libipld-core = { version = "0.13.1", features = ["serde-codec"] }
cid = "0.8.6"
rand_core = "0.6.4"

fil_actors_runtime = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230114-pre-rc.3", features = ["m2-native"] }
fil_actor_eam = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230114-pre-rc.3" }
fil_actor_datacap = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230114-pre-rc.3"  }
fil_actor_multisig = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230114-pre-rc.3"  }
fil_actor_init = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230114-pre-rc.3"  }
fil_actor_miner = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230114-pre-rc.3"  }

[patch.crates-io]
fvm_shared = { version = "3.0.0-alpha.14", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_encoding = { version = "0.3.0", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_hamt = { version = "0.6.1", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_amt = { version = "0.5.0", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm = { version = "3.0.0-alpha.14", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes", default-features = false, features = ["m2-native"] }
fvm_sdk = { version = "3.0.0-alpha.17", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }

fvm_actor_utils = { version = "3.0.0", git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
frc46_token = { version = "3.0.0", git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
frc42_dispatch = { version = "3.0.0", git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
