[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_shared = { version = "3.0.0-alpha.17" }
fvm = { version = "3.0.0-alpha.21" }
fvm_ipld_encoding = { version = "0.3.3" }
fvm_integration_tests = { version = "3.0.0-alpha.1" }
# fvm_integration_tests = { version = "0.1.1-alpha.1", path = "../../ref-fvm/testing/integration" }

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
wabt = "0.10.0"
hex = "0.4.3"
bls-signatures = "0.13.0"
multihash = { version = "0.16.1", default-features = false }
libipld-core = { version = "0.13.1", features = ["serde-codec"] }
cid = "0.8.6"
rand_core = "0.6.4"
anyhow = "1.0.47"

fil_actors_runtime = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6", features = ["m2-native"] }
fil_actor_eam = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6" }
fil_actor_datacap = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6"  }
fil_actor_multisig = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6"  }
fil_actor_init = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6"  }
fil_actor_miner = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6"  }
fil_actor_evm = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20230206-pre-rc.6"  }

fvm_actor_utils = { version = "4.0.0" }
frc46_token = { version = "4.0.0" }
frc42_dispatch = { version = "3.0.1-alpha.1" }