[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fvm_ipld_blockstore = { version = "0.1.1" }
fvm_shared = { version = "3.0.0-alpha.13" }
fvm = { version = "3.0.0-alpha.12", default-features = false, features = ["m2-native"] }
fvm_ipld_encoding = { version = "0.3.0" }
fvm_integration_tests = { version = "0.1.1-alpha.1", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }

serde = { version = "1.0", features = ["derive"] }
serde_tuple = "0.5"
wabt = "0.10.0"
hex = "0.4.3"

fil_actors_runtime = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20221219-fvm-m2-patch.1", features = ["m2-native"] }
fil_actor_eam = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20221219-fvm-m2-patch.1" }
fil_actor_datacap = { version = "10.0.0-alpha.1", git = "https://github.com/filecoin-project/builtin-actors", tag = "dev/20221219-fvm-m2-patch.1"  }

[patch.crates-io]
fvm_shared = { version = "3.0.0-alpha.14", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_encoding = { version = "0.3.0", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_hamt = { version = "0.6.1", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_amt = { version = "0.5.0", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm_ipld_blockstore = { version = "0.1.1", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }
fvm = { version = "3.0.0-alpha.14", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes", default-features = false, features = ["m2-native"] }
fvm_sdk = { version = "3.0.0-alpha.17", git = "https://github.com/Zondax/ref-fvm", branch = "lola/fixes" }

# Replacing dependencies on fil_actor_datacap in order to point to newer version (that support fevm)
fvm_actor_utils = { git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
frc46_token = { git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }
frc42_dispatch = { git = "https://github.com/filecoin-project/filecoin-actor-utils", branch = "feat/fvm-m2" }

